--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>shahzaib lodhi </div>
+    <div>shahzaib lodhi</div>
+    <div>changes the main rep</div>
 </body>
 </html>
